--- a/html/static/css/style.css
+++ b/html/static/css/style.css
@@ -4135,6 +4135,7 @@ footer .copy span {
   background-repeat:no-repeat;
   padding-top:35px;
   position:absolute;
+  width:100%;
   top:50%;
   left:50%;
   transform: translate(-50%, -50%);
