--- a/html/static/css/style.css
+++ b/html/static/css/style.css
@@ -335,8 +335,10 @@ footer:after {
 
 [class*="inner"] {
   width: 100%;
-  height: 100%;
   margin: 0 auto;
+}
+[class*="inner"]:not([class*="swiper-container"]) {
+  height: 100%;
 }
 .inner-wrap {
   padding: 0 120px;
@@ -901,7 +903,14 @@ header .menu-all > div .category > ul > li .depth2 li + li {
 
 /*section 01*/
 .main-section-wrap-01 .presentation {
-  padding-top: 105px;
+  /* padding-top: 105px; */
+  height:auto;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
 }
 .main-section-wrap-01 .presentation dl {
   padding-left: 250px;
@@ -1057,6 +1066,7 @@ header .menu-all > div .category > ul > li .depth2 li + li {
   position: absolute;
   left: 264px;
   top: -79px;
+  z-index:10;
 }
 .main-section-wrap-02 .scroll:active:enabled {
   transform: none;
@@ -1893,7 +1903,9 @@ footer .copy span {
   width: 282px;
   overflow: hidden;
   overflow-y: auto;
-  max-height: 100%;
+  max-height: -webkit-calc(100vh - 40px);
+  max-height: -moz-calc(100vh - 40px);
+  max-height: calc(100vh - 40px);
   transition: all ease-in-out 0.3s;
   -webkit-transition: all ease-in-out 0.3s;
   -moz-transition: all ease-in-out 0.3s;
@@ -1909,9 +1921,6 @@ footer .copy span {
 }
 .contents-wrap .side-menu.l-fixed .title-wrap {
   opacity: 0;
-}
-.contents-wrap .side-menu.reverse {
-  top: auto !important;
 }
 
 .contents-wrap .sub-title-wrap {
@@ -5737,6 +5746,8 @@ dl.table dd {
 }
 [class*="fadeIn"].animation--start {
   opacity: 1;
+}
+[class*="fadeIn"].animation--start:not(.active-none) {
   transform: none;
   -webkit-transform: none;
   -moz-transform: none;
@@ -5897,5 +5908,11 @@ dl.table dd {
   }
   .main-section-wrap-02 .project .project-list ul li > article > div:first-of-type .info > div > dl dd ul li {
     margin: 5px;
+  }
+}
+
+@media only screen and (max-height: 741px) {
+  .contents-wrap .side-menu.reverse {
+    top: auto !important;
   }
 }
