위플즈 소개 페이지 추가 수정

--- a/html/static/css/style.css
+++ b/html/static/css/style.css
@@ -3505,7 +3505,7 @@ footer .copy span {
 }
 
 .introduce .section-wrap-01 .inner {
-  padding-top: 125px;
+  padding-top: 10%;
 }
 .introduce .section-wrap-01 .inner .story {
   position: absolute;
